--- a/css/resume.css
+++ b/css/resume.css
@@ -355,6 +355,148 @@ text-transform: uppercase;
 }
 
 
+/* contact us Form Base */
+
+  
+
+/* (5.2.2) Placeholder Text */
+
+    ::-webkit-input-placeholder {
+        font-size: 15px;
+    }
+
+    ::-moz-placeholder {
+        font-size: 15px;
+    }
+
+    :-ms-input-placeholder {
+        font-size: 15px;
+    }
+
+    ::placeholder {
+        font-size: 15px;
+    }
+  *:focus {
+        outline: none;
+    }
+
+
+/* (5.2.3) Form Textarea */
+    textarea {
+        display: inline;
+        box-sizing: border-box;
+        margin-bottom: 5px;
+        padding: 4px;
+        resize: none;
+        width: 100%;
+        border: none;
+        border-bottom: 2px solid #AAA;
+        transition: 0.2s ease;
+        line-height: 1.5em;
+        overflow-y: auto;
+        overflow-x: hidden;
+            background: #fdfdfd;
+    }
+
+    textarea:focus {
+        border-bottom: 2px solid #554488;
+        color: #3e3e3e;
+        transition: 0.2s ease;
+    }
+
+/* (5.2.4) Form Textfeild for User Name */
+
+    .first-line input[type="text"] {
+        display: inline;
+        box-sizing: border-box;
+        margin-bottom: 20px;
+        padding: 4px;
+        width: 100%;
+        height: 32px;
+        border: none;
+        border-bottom: 2px solid #AAA;
+        transition: 0.2s ease;
+            background: #fdfdfd;
+    }
+    input[name="username"] {
+        margin-right: 20px;
+
+    }
+    input[type="text"] {
+        display: block;
+        box-sizing: border-box;
+        margin-bottom: 20px;
+        padding: 4px;
+        width: 100%;
+        height: 32px;
+        border: none;
+        border-bottom: 2px solid #AAA;
+        transition: 0.2s ease;
+            background: #fdfdfd;
+    }
+
+    input[type="text"]:focus {
+        border-bottom: 2px solid #554488;
+        color: #3e3e3e;
+        transition: 0.2s ease;
+    }
+
+/* (5.2.5) Form Textfeild for Email */
+    .first-line input[type="email"] {
+        display: inline;
+        box-sizing: border-box;
+        margin-bottom: 20px;
+        padding: 4px;
+        width: 100%;
+        height: 32px;
+        border: none;
+        border-bottom: 2px solid #AAA;
+        transition: 0.2s ease;
+            background: #fdfdfd;
+    }
+
+    input[type="email"]:focus {
+        border-bottom: 2px solid #554488;
+        color: #3e3e3e;
+        transition: 0.2s ease;
+    }
+
+/* (5.2.6) Form Button */
+
+    input[type="submit"] {
+        /*position: relative;
+  left:250px;*/
+        margin-top: 20px;
+        width: 150px;
+        height: 32px;
+        border: none;
+        border-radius: 2px;
+        color: #FFF;
+        text-transform: uppercase;
+        transition: 0.1s ease;
+        cursor: pointer;
+        font-size: 1.2EM;
+        padding: 5px 10px;
+    margin-right: 10px;
+    background-color: #3e3e3e;
+    }
+
+    input[type="submit"]:hover,
+    input[type="submit"]:focus {
+        opacity: 0.8;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
+        transition: 0.1s ease;
+    }
+
+    input[type="submit"]:active {
+        opacity: 1;
+        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.4);
+        transition: 0.1s ease;
+    }
+
+
+
+
 
 /*--start-responsive-design--*/
 /*
