css footer update

--- a/css/resume.css
+++ b/css/resume.css
@@ -497,7 +497,7 @@ text-transform: uppercase;
         transition: 0.1s ease;
     }
 
-.footer_section{
+.copyright{
     background: #3e3e3e;
     padding: 10px 50px;
     color: #ffffff;
