--- a/css/resume.css
+++ b/css/resume.css
@@ -504,27 +504,26 @@ text-transform: uppercase;
 }
 
 
-
 .overlay {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 100%;
-  width: 100%;
-  opacity: 0;
-  transition: .5s ease;
-  background-color: #008CBA;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left:  0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: .5s ease;
+    background-color: #554488;
 }
 
-.container:hover .overlay {
+.gallery_image:hover .overlay  {
   opacity: 1;
 }
 
 .text {
-  color: white;
-  font-size: 20px;
+  color: #ffffff;
+  font-size: 1.5em;
   position: absolute;
   top: 50%;
   left: 50%;
