--- a/css/resume.css
+++ b/css/resume.css
@@ -508,10 +508,10 @@ text-transform: uppercase;
     position: absolute;
     top: 0;
     bottom: 0;
-    left:  0;
+    left:  10%;
     right: 0;
-    height: 100%;
-    width: 100%;
+    height: 30%;
+    width: 80%;
     opacity: 0;
     transition: .5s ease;
     background-color: #554488;
