--- a/css/resume.css
+++ b/css/resume.css
@@ -162,9 +162,6 @@
         width: 100%;
         margin-bottom: 20px;
     }
-.gallery_image img:hover{
-        border-radius: 15px;
-}
 .side-group+.fa{
     width: 30px;
 }
@@ -508,22 +505,25 @@ text-transform: uppercase;
     position: absolute;
     top: 0;
     bottom: 0;
-    left:  10%;
+    left:  70%;
     right: 0;
-    height: 30%;
-    width: 80%;
-    opacity: 0;
+    height: 20%;
+    width: 25%;
+    opacity: 0.3;
     transition: .5s ease;
-    background-color: #554488;
+    background-color: #3e3e3e;
 }
 
 .gallery_image:hover .overlay  {
   opacity: 1;
+  background-color: #554488;
 }
 
 .text {
   color: #ffffff;
-  font-size: 1.5em;
+  font-size: 0.8em;
+  line-height: 1.5em;
+
   position: absolute;
   top: 50%;
   left: 50%;
