--- a/css/resume.css
+++ b/css/resume.css
@@ -582,8 +582,8 @@ line-height: 5.8rem;        }
 } 
 }
    
-}
 
+/*
 @media (max-width:667px) {}
 
 @media (max-width:640px) {}
@@ -598,6 +598,7 @@ line-height: 5.8rem;        }
 
 @media (max-width:384px) {}
 */
+
 @media (max-width:375px) {
     h1 {
         font-size: 3.5em;
