--- a/css/resume.css
+++ b/css/resume.css
@@ -602,8 +602,10 @@ line-height: 5.8rem;        }
 @media (max-width:375px) {
     h1 {
         font-size: 3.5em;
-line-height: 4.8rem;        }
+        line-height: 4.8rem;        
+        }
 }
-
+/*
 @media (max-width:320px) {
  }
+ */
