--- a/css/Demo type scale.css
+++ b/css/Demo type scale.css
@@ -1,34 +1,36 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap");
 
 :root {
-    --base-size: 16px;
-    --nav-background-colour: #2C3A47;
-    --background-colour: #fdfdfd;
-    /* --text-color: #373737; */
-    --text-color: #2C3A47;
-    --primary-color: #00b894;
-    --second-color: #CCf0e9;
+  --base-size: 16px;
+  --nav-background-colour: #2c3a47;
+  --background-colour: #fdfdfd;
+  /* --text-color: #373737; */
+  --text-color: #2c3a47;
+  --primary-color: #00b894;
+  --second-color: #ccf0e9;
 }
 
-
 html {
-    font-size: var(--base-size);
+  font-size: var(--base-size);
+}
+.mybg {
+  background-color: var(--primary-color);
 }
 
 body {
-    font-family: 'Montserrat', serif;
-    background-color: var(--background-colour);
-    color: var(--text-color);
-    overflow-x: hidden;
-    line-height: 1.75;
+  font-family: "Montserrat", serif;
+  background-color: var(--background-colour);
+  color: var(--text-color);
+  overflow-x: hidden;
+  line-height: 1.75;
 }
 
 p {
-    margin-bottom: 1rem;
+  margin-bottom: 1rem;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 h1,
@@ -36,328 +38,319 @@ h2,
 h3,
 h4,
 h5 {
-    font-family: 'Montserrat', serif;
-    font-weight: 400;
-    font-style: normal;
+  font-family: "Montserrat", serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 h1 {
-    margin-top: 0;
-    font-size: 2.986rem;
-    line-height: 72px;
-    letter-spacing: -0.015em;
+  margin-top: 0;
+  font-size: 2.986rem;
+  line-height: 72px;
+  letter-spacing: -0.015em;
 }
 
 h2 {
-    font-size: 2.25rem;
-    line-height: 48px;
-    letter-spacing: -0.015em;
+  font-size: 2.25rem;
+  line-height: 48px;
+  letter-spacing: -0.015em;
 }
 
 .sub-heading,
 h3 {
-    font-size: 2rem;
-    line-height: 48px;
-    letter-spacing: -0.015em;
+  font-size: 2rem;
+  line-height: 48px;
+  letter-spacing: -0.015em;
 }
 
 h4 {
-    font-size: 1.728rem;
-    line-height: 32px;
-    letter-spacing: -0.015em;
+  font-size: 1.728rem;
+  line-height: 32px;
+  letter-spacing: -0.015em;
 }
 
 h5 {
-    font-size: 1.5rem;
-    line-height: 32px;
-    letter-spacing: -0.015em;
+  font-size: 1.5rem;
+  line-height: 32px;
+  letter-spacing: -0.015em;
 }
 
 h6 {
-    font-size: 1.125rem;
-    line-height: 30px;
-    letter-spacing: -0.015em;
+  font-size: 1.125rem;
+  line-height: 30px;
+  letter-spacing: -0.015em;
 }
 
 button,
 p {
-    font-size: 1rem;
-    line-height: 24px;
-    letter-spacing: -0.015em;
+  font-size: 1rem;
+  line-height: 24px;
+  letter-spacing: -0.015em;
 }
 
 .copyright,
 .navbar {
-    background-color: var(--nav-background-colour) !important;
-    color: #ffffff;
+  background-color: var(--nav-background-colour) !important;
+  color: #ffffff;
 }
 
 /* Custom Classes */
 small,
 .text_small {
-    font-size: 0.875rem;
-    line-height: 24px;
-    letter-spacing: -0.015em;
+  font-size: 0.875rem;
+  line-height: 24px;
+  letter-spacing: -0.015em;
 }
 
 .extra_small {
-    font-size: 0.75rem;
-    line-height: 16px;
-    letter-spacing: -0.015em;
+  font-size: 0.75rem;
+  line-height: 16px;
+  letter-spacing: -0.015em;
 }
 
 .extra_large {
-    font-size: 9rem;
+  font-size: 9rem;
 }
 
 .flip {
-    transform: rotate(-90deg);
-    opacity: 0.1;
+  transform: rotate(-90deg);
+  opacity: 0.1;
 }
 
 .btn-main {
-    background-color: var(--primary-color) !important;
-    border-color: var(--primary-color) !important;
-    color: #ffffff;
+  background-color: var(--primary-color) !important;
+  border-color: var(--primary-color) !important;
+  color: #ffffff;
 }
 
 .btn-secondary {
-    background-color: var(--second-color) !important;
-    border-color: var(--primary-color) !important;
-    color: var(--text-color);
+  background-color: var(--second-color) !important;
+  border-color: var(--primary-color) !important;
+  color: var(--text-color);
 }
 
 .btn-secondary:hover {
-    background-color: var(--primary-color) !important;
-    border-color: var(--primary-color) !important;
-
+  background-color: var(--primary-color) !important;
+  border-color: var(--primary-color) !important;
 }
 
 .green-text {
-    color: var(--primary-color);
+  color: var(--primary-color);
 }
 
 .opacity-50 {
-    opacity: 0.7;
+  opacity: 0.7;
 }
 
 .service-text-center {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .cal-height-1,
 .cal-height-2,
 .cal-height-3 {
-    display: block;
+  display: block;
 }
 
 /* New Css */
 .custom-padding {
-    padding: 4.5rem 1rem;
+  padding: 4.5rem 1rem;
 }
 
 .custom-padding-bottom {
-    padding: 2.5rem 1rem;
+  padding: 2.5rem 1rem;
 }
 
 .custom-margin {
-    padding: 6rem 0rem;
+  padding: 6rem 0rem;
 }
 
 .list-group-item {
-    border: none !important;
-    background-color: #fdfdfd !important;
-    padding-left: 0px !important;
+  border: none !important;
+  background-color: #fdfdfd !important;
+  padding-left: 0px !important;
 }
 
 .progress-bar {
-    background-color: var(--primary-color);
+  background-color: var(--primary-color);
 }
 
-
 .progress_pointer {
-    background: var(--primary-color);
-    padding: 0rem 0.75rem;
-    width: max-content;
-    color: #fff;
-    position: absolute;
-    right: 45%;
-    top: 0px;
-    border-radius: 4px;
+  background: var(--primary-color);
+  padding: 0rem 0.75rem;
+  width: max-content;
+  color: #fff;
+  position: absolute;
+  right: 45%;
+  top: 0px;
+  border-radius: 4px;
 }
 
 .company-card {
-    border: 1px solid #373737;
+  border: 1px solid #373737;
 }
 
 .custom-data img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .hero-banner {
-    background-image: url(../image/Rishabh-Tiwari-Hero-Image.jpg);
-    background-position: top;
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position-x: left;
+  background-image: url(../image/Rishabh-Tiwari-Hero-Image.jpg);
+  background-position: top;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position-x: left;
 }
 
 .bottom-section {
-    background-color: #CCf0e9;
+  background-color: #ccf0e9;
 }
 
 .service_UICard {
-    padding: 0 1rem;
+  padding: 0 1rem;
 }
 
 .service-bg {
-    height: 450px;
-    padding: 0 1rem;
-    border-bottom: 1px solid var(--text-color);
-
+  height: 450px;
+  padding: 0 1rem;
+  border-bottom: 1px solid var(--text-color);
 }
 
 .service_container {
-    width: 50%;
+  width: 50%;
 }
 
 .service_image {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 .service_image img {
-    width: 70%;
+  width: 70%;
 }
 
 .experience-bg {
-    padding: 3rem 0;
-    border-bottom: 1px solid var(--text-color);
+  padding: 3rem 0;
+  border-bottom: 1px solid var(--text-color);
 }
 
-
 .project-profile-bg .accordion-body ul li {
-    padding-bottom: 1rem;
-    padding-left: 1rem;
+  padding-bottom: 1rem;
+  padding-left: 1rem;
 }
 
 .project-profile-bg .accordion-body ul li::marker {
-    color: var(--primary-color);
-    font-size: 1.1rem;
+  color: var(--primary-color);
+  font-size: 1.1rem;
 }
 
 .project-profile-bg .accordion-button:focus,
 .project-profile-bg .accordion-button:hover {
-    background-color: var(--second-color);
-    border-color: var(--primary-color);
-    color: var(--text-color);
-    box-shadow: 0 0 0 0.25rem rgba(204, 240, 233, .25);
+  background-color: var(--second-color);
+  border-color: var(--primary-color);
+  color: var(--text-color);
+  box-shadow: 0 0 0 0.25rem rgba(204, 240, 233, 0.25);
 }
 
 .project-profile-bg .accordion-button:not(.collapsed) {
-    background-color: var(--primary-color);
-    color: #ffffff;
+  background-color: var(--primary-color);
+  color: #ffffff;
 }
 
 .project-profile-bg .accordion-button::after {
-    content: "\002B";
-    font-size: 2rem;
-    background-image: none;
-    transform: rotate(180deg);
+  content: "\002B";
+  font-size: 2rem;
+  background-image: none;
+  transform: rotate(180deg);
 }
 
 .project-profile-bg .accordion-button:not(.collapsed)::after {
-    content: "\002B";
-    font-size: 2rem;
-    background-image: none;
-    transform: rotate(45deg);
+  content: "\002B";
+  font-size: 2rem;
+  background-image: none;
+  transform: rotate(45deg);
 }
-
-
 
 /* Blob animation */
 
 .zoom {
-    animation: zoom 5s infinite;
-    -webkit-animation: zoom 5s infinite;
+  animation: zoom 5s infinite;
+  -webkit-animation: zoom 5s infinite;
 }
 
 @keyframes zoom {
-    0% {
-        width: 55%;
-    }
+  0% {
+    width: 55%;
+  }
 
-    50% {
-        width: 40%;
-    }
+  50% {
+    width: 40%;
+  }
 
-    100% {
-        width: 55%;
-    }
+  100% {
+    width: 55%;
+  }
 }
 
-
 .rotate {
-    animation: rotation 10s;
+  animation: rotation 10s;
 }
 
 .linear {
-    animation-timing-function: linear;
+  animation-timing-function: linear;
 }
 
 .infinite {
-    animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
 }
 
 @keyframes rotation {
-    from {
-        transform: rotate(0deg);
-    }
+  from {
+    transform: rotate(0deg);
+  }
 
-    to {
-        transform: rotate(359deg);
-    }
+  to {
+    transform: rotate(359deg);
+  }
 }
-
-
 
 /* Portfolio Page*/
 
 .portfolio_image .tab {
-    display: inline-block;
-    padding: 6px 16px;
-    margin-right: 12px;
-    cursor: pointer;
+  display: inline-block;
+  padding: 6px 16px;
+  margin-right: 12px;
+  cursor: pointer;
 }
 
 .portfolio_image .tab {
-    border: 1px solid var(--second-color);
-    border-radius: 60px;
+  border: 1px solid var(--second-color);
+  border-radius: 60px;
 }
 
 .portfolio_image .tab:hover {
-    background-color: var(--second-color);
-    border: 1px solid var(--second-color);
-    border-radius: 60px;
+  background-color: var(--second-color);
+  border: 1px solid var(--second-color);
+  border-radius: 60px;
 }
 
 .portfolio_image .tab.active {
-    border: 1px solid var(--second-color);
-    background-color: var(--primary-color);
-    border-radius: 60px;
-    color: #ffffff;
+  border: 1px solid var(--second-color);
+  background-color: var(--primary-color);
+  border-radius: 60px;
+  color: #ffffff;
 }
 
 .portfolio_image .images {
-    display: none;
+  display: none;
 }
 
 .portfolio_image .images.active {
-    display: block;
+  display: block;
 }
 
 /* .gallery_image {
@@ -365,76 +358,73 @@ small,
 } */
 
 .gallery_image .overlay {
-    border: 1px solid var(--second-color);
-    color: var(--text-color);
-    font-size: 0.75rem;
-    display: flex;
-    justify-content: center;
-    padding: 0.5rem;
+  border: 1px solid var(--second-color);
+  color: var(--text-color);
+  font-size: 0.75rem;
+  display: flex;
+  justify-content: center;
+  padding: 0.5rem;
 }
 
 .gallery_image:hover .overlay {
-    background-color: var(--second-color);
+  background-color: var(--second-color);
 }
 
 /* Resposive CSS Code */
 
 /* Small devices (landscape phones, less than 768px) */
 @media (max-width: 767.98px) {
-    .custom-padding {
-        padding: 2.5rem 1rem;
-    }
+  .custom-padding {
+    padding: 2.5rem 1rem;
+  }
 
-    .custom-padding-bottom {
-        padding: 1.5rem 1rem;
+  .custom-padding-bottom {
+    padding: 1.5rem 1rem;
+  }
 
-    }
+  h1,
+  h2,
+  h3 {
+    font-size: 2rem;
+    line-height: 48px;
+    letter-spacing: -0.015em;
+  }
 
+  .sub-heading,
+  h4 {
+    font-size: 1.728rem;
+    line-height: 32px;
+    letter-spacing: -0.015em;
+  }
 
-    h1,
-    h2,
-    h3 {
-        font-size: 2rem;
-        line-height: 48px;
-        letter-spacing: -0.015em;
-    }
+  h5 {
+    font-size: 1.5rem;
+    line-height: 32px;
+    letter-spacing: -0.015em;
+  }
 
-    .sub-heading,
-    h4 {
-        font-size: 1.728rem;
-        line-height: 32px;
-        letter-spacing: -0.015em;
-    }
+  h6 {
+    font-size: 1.125rem;
+    line-height: 30px;
+    letter-spacing: -0.015em;
+  }
 
-    h5 {
-        font-size: 1.5rem;
-        line-height: 32px;
-        letter-spacing: -0.015em;
-    }
+  button,
+  p,
+  .base {
+    font-size: 1rem;
+    line-height: 24px;
+    letter-spacing: -0.015em;
+  }
 
-    h6 {
-        font-size: 1.125rem;
-        line-height: 30px;
-        letter-spacing: -0.015em;
-    }
-
-    button,
-    p,
-    .base {
-        font-size: 1rem;
-        line-height: 24px;
-        letter-spacing: -0.015em;
-    }
-
-
-    .flip {
-        transform: rotate(0deg);
-    }
+  .flip {
+    transform: rotate(0deg);
+  }
 }
 
 /* XX-Large devices (larger desktops, 1600px and up) */
 @media (min-width: 1600px) {
-    .container-fluid {
-        max-width: 1320px;
-    }
+  .container-fluid {
+    max-width: 1320px;
+  }
 }
