--- a/css/Demo type scale.css
+++ b/css/Demo type scale.css
@@ -15,7 +15,6 @@
 .text-green {
   color: var(--primary-color);
 }
-
 html {
   font-size: var(--base-size);
 }
@@ -210,7 +209,7 @@ small,
 }
 
 .bottom-section {
-  background-color: #ccf0e9;
+  background-color: var(--second-color);
 }
 
 .service_UICard {
