Update Demo type scale.css

--- a/css/Demo type scale.css
+++ b/css/Demo type scale.css
@@ -15,6 +15,16 @@
 .text-green {
   color: var(--primary-color);
 }
+ul.skill-tag li p:not(:first-child, :last-child)::after {
+  content: "/";
+  padding: 0 6px;
+  font-size: 0.6rem;
+}
+ul.skill-tag li p:first-child::after {
+  content: ":";
+  padding: 0 6px;
+  font-size: 0.6rem;
+}
 html {
   font-size: var(--base-size);
 }
